--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-    background-color: #0044cc; /* Blau */
+    background-color: #3399ff; /* Hellblau */
     color: white;
     text-align: center;
     padding: 1em 0;
@@ -25,6 +25,61 @@ h1 {
 }
 
 h2 {
+    color: #ff7f00; /* Orange */
+}
+
+/* Menü Button */
+.menu-btn {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.menu-btn .bar {
+    width: 30px;
+    height: 5px;
+    background-color: #3399ff; /* Hellblau */
+    border-radius: 5px;
+}
+
+/* Menü */
+.menu {
+    position: fixed;
+    top: 0;
+    left: -250px;
+    height: 100%;
+    width: 250px;
+    background-color: #3399ff; /* Hellblau */
+    transition: 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 60px;
+}
+
+.menu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu ul li {
+    margin: 20px 0;
+}
+
+.menu ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.5em;
+}
+
+.menu ul li a:hover {
     color: #ff7f00; /* Orange */
 }
 
@@ -59,7 +114,7 @@ h2 {
 
 .rsvp .btn {
     display: inline-block;
-    background-color: #0044cc; /* Blau */
+    background-color: #3399ff; /* Hellblau */
     color: white;
     padding: 10px 20px;
     text-decoration: none;
@@ -68,7 +123,7 @@ h2 {
 }
 
 .rsvp .btn:hover {
-    background-color: #003399;
+    background-color: #0077cc; /* Dunkleres Blau */
 }
 
 /* Foto-Galerie */
