--- a/styles.css
+++ b/styles.css
@@ -39,12 +39,13 @@ h2 {
     width: 30px;
     height: 30px;
     cursor: pointer;
+    z-index: 10; /* Stellt sicher, dass der Button über anderen Inhalten bleibt */
 }
 
 .menu-btn .bar {
     width: 30px;
     height: 5px;
-    background-color: #3399ff; /* Hellblau */
+    background-color: black; /* Menü-Button Balken in schwarz */
     border-radius: 5px;
 }
 
