--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ h2 {
     width: 30px;
     height: 30px;
     cursor: pointer;
+    z-index: 10; /* Stellt sicher, dass der Button über anderen Inhalten bleibt */
 }
 
 .menu-btn .bar {
