--- a/src/css/App.module.css
+++ b/src/css/App.module.css
@@ -1,6 +1,6 @@
 :root {
   --section-timeline: #7F909E;
-  --theme-one: #4F2416;
+  --theme-one: #7B281D;
   --theme-two: #C05E2F;
   --theme-three: #333B61;
   --theme-four: #A3BCD0;
