--- a/src/css/App.module.css
+++ b/src/css/App.module.css
@@ -2,9 +2,9 @@
   --section-timeline: #7F909E;
   --theme-one: #7B281D;
   --theme-two: #C05E2F;
-  --theme-three: #6D2A3C;
+  --theme-three: #333B61;
   --theme-four: #A3BCD0;
-  --theme-five: #582432;
+  --theme-five: #6D2A3C;
   --button_bg: #7F909E;
 }
 
